# omop-to-cadence-converter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: poetry-pytest.yml
config/: config.ini
experimental/: load_from_csv_eunomia.ipynb
omop_to_cadence_converter/: app.py  convert_omop_to_cadence.py  convert_omop_to_cadence_csv.py  convert_omop_to_cadence_postgres.py  generate_query_csv.py  generate_query_postgres.py
tests/: test_convert_omop_to_cadence.py  test_convert_omop_to_cadence_csv.py  test_omop_to_cadence_converter.py
