[tool.poetry]
name = "omop-to-cadence-converter"
version = "0.3.0"
description = ""
authors = ["Max Natthawut Adulyanukosol <na399@unc.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
psycopg2 = "^2.9.3"
duckdb = "^0.4.0"
pyarrow = "^9.0.0"
streamlit = "^1.12.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
ipython-sql = "^0.4.1"
duckdb-engine = "^0.3.3"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[yapf]
column_limit = 120
use_tabs = true
dedent_closing_brackets = true
coalesce_brackets = true
join_multiple_lines = true
split_all_top_level_comma_separated_values = false
split_before_bitwise_operator = false
split_before_closing_bracket = false
split_before_arithmetic_operator = false
